<resources>
    <string name="app_name">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="experience_the_all_new_app">Experience the all new App!</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="register">Register</string>
    <string name="log_in_to_get_started">Log in to get started</string>
</resources>