<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.UserRegisterFragment">

    <data>
        <variable
            name="userRegisterViewModel"
            type="com.devdhruv.user.viewModels.UserRegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register in to get started"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:text="@string/experience_the_all_new_app"/>

        <EditText
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:paddingStart="12dp"
            android:paddingBottom="20dp"/>

        <EditText
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:text="@={userRegisterViewModel.emailId}"
            android:hint="@string/e_mail_id"
            android:paddingStart="12dp"
            android:paddingBottom="20dp"/>

        <EditText
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="8dp"
            android:hint="@string/mobile_number"
            android:paddingStart="12dp"
            android:paddingBottom="20dp"/>

        <EditText
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_16"
            android:drawablePadding="8dp"
            android:text="@={userRegisterViewModel.password}"
            android:hint="@string/password"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"/>

        <EditText
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_16"
            android:drawablePadding="8dp"
            android:hint="@string/confirm_password"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="@{() -> userRegisterViewModel.register()}"
            android:textSize="16sp"
            android:background="@drawable/button_background"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:paddingStart="4dp"
                android:onClick="@{() -> userRegisterViewModel.onNavigateClick()}"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</layout>