<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UserLoginFragment">

    <data>
        <variable
            name="userLoginViewModel"
            type="com.devdhruv.user.viewModels.UserLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_to_get_started"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience_the_all_new_app"
                android:layout_marginTop="12dp"
                android:textSize="18dp"/>

            <EditText
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/e_mail_id"
                android:text="@={userLoginViewModel.emailId}"
                android:paddingStart="12dp"
                android:paddingBottom="20dp"/>

            <EditText
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_16"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={userLoginViewModel.password}"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:onClick="@{() -> userLoginViewModel.onNavigateClick()}"
                android:textColor="@color/user_base_color"
                android:layout_gravity="end"/>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login"
            android:onClick="@{() -> userLoginViewModel.login()}"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>